--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,7 +9,8 @@ body {
 			height: 100%;
 			&:before {
 				content: '';
-				width: 0;
+				width: 0!important;
+				padding: 0 !important;
 				height: 100vh;
 				display: inline-block;
 				vertical-align: middle;
@@ -17,6 +18,8 @@ body {
 			&>div {
 				display: inline-block;
 				vertical-align: middle;
+				padding: 0 3rem;
+				width: 99%;
 			}
 		}
 		.topArrow,
@@ -58,7 +61,8 @@ body {
 		.head {
 			padding-bottom: 2rem;
 			text-align: center;
-			margin-top: -22%;
+			margin-top: -18%;
+			position: relative;
 			&>h1,
 			&>p {
 				display: inline-block;
@@ -68,17 +72,24 @@ body {
 				width: 29.3rem;
 				height: 9.4rem;
 				border-right: 1px solid #aaa;
-				img {
-					margin-top: -0.7rem;
-				}
+				width: 51%;
+				float: left;
+				height: auto;
+				img {}
 			}
 			p {
-				width: auto;
-				font-size: 1.4rem;
+				font-size: 1.2rem;
 				font-weight: 600;
 				text-align: left;
 				padding-left: 1.1rem;
 				line-height: 1.2;
+				width: 49%;
+				float: left;
+				transform: translate(0, -50%);
+				position: absolute;
+				top: 50%;
+				left: 52%;
+				padding: 0;
 			}
 		}
 		.body {
@@ -102,6 +113,7 @@ body {
 							width: 100%;
 							height: 100%;
 							border: 1px solid #aaa;
+							border-radius: 4px;
 							background-color: #fff;
 							display: block;
 							padding: 0.5rem;
@@ -285,7 +297,12 @@ body {
 							width: 49%;
 							&>label {
 								&>input {
-									display: none;
+									position: fixed;
+									top: -999rem;
+									left: -999rem;
+									width: 0;
+									height: 0;
+									z-index: -1;
 								}
 								&>div {
 									float: left;
@@ -299,6 +316,7 @@ body {
 									display: block;
 									float: none;
 									width: 100%;
+									height: 100%;
 									&>.daterangepicker {
 										display: none;
 										position: absolute;
@@ -308,8 +326,9 @@ body {
 										width: 278px;
 										padding: 4px;
 										margin: 0;
-										top: 0;
-										left: 0;
+										top: 150%!important;
+										left: -50%!important;
+										width: 240% !important;
 									}
 								}
 							}
