--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,7 @@ body {
 				width: 99%;
 			}
 		}
-		.topArrow,
+		.room.topArrow,
 		.completer-dropdown {
 			position: relative;
 			margin-top: 16px;
@@ -102,7 +102,21 @@ body {
 						position: relative;
 						width: 50%;
 					}
-					label {
+					.rooms {
+						position: relative;
+						padding-left: .7rem;
+						&:before {
+							width: .7rem;
+							height: 100%;
+							display: block;
+							content: '';
+							position: absolute;
+							top: 0;
+							left: 0;
+							cursor: default;
+						}
+					}
+					.rooms label {
 						position: relative;
 						display: block;
 						.label {
@@ -121,6 +135,50 @@ body {
 							font-size: 1.3rem;
 							color: #aaa;
 							cursor: pointer;
+							span {
+								vertical-align: middle;
+								display: inline-block;
+								white-space: nowrap;
+							}
+						}
+						.txt {
+							width: 100%;
+							height: 100%;
+							border: 1px solid #aaa;
+							background-color: #fff;
+							display: block;
+							padding: 0.5rem;
+							vertical-align: middle;
+							font-size: 1.3rem;
+							color: #222;
+						}
+						input:focus,
+						input.ng-dirty,
+						input.ng-touched,
+						&.touched {
+							div .label,
+							&~.label {
+								display: none;
+							}
+						}
+					}
+
+					.dateRange label {
+						position: relative;
+						display: block;
+						.label {
+							position: absolute;
+							top: 0;
+							left: 0;
+							z-index: 1;
+							width: 90%;
+							height: 100%;
+							display: block;
+							padding: 0.6rem;
+							font-size: 1.2rem;
+							color: #aaa;
+							cursor: pointer;
+							margin-left: 0.7rem;
 							span {
 								vertical-align: middle;
 								display: inline-block;
@@ -279,20 +337,6 @@ body {
 					}
 
 					&.opt {
-						&>div {
-							position: relative;
-							padding-left: .7rem;
-							&:before {
-								width: .7rem;
-								height: 100%;
-								display: block;
-								content: '';
-								position: absolute;
-								top: 0;
-								left: 0;
-								cursor: default;
-							}
-						}
 						.dateRange {
 							width: 49%;
 							&>label {
@@ -308,6 +352,19 @@ body {
 									float: left;
 									position: relative;
 									width: 50%;
+									position: relative;
+									padding-left: .7rem;
+									overflow: hidden;
+									&:before {
+										width: .7rem;
+										height: 100%;
+										display: block;
+										content: '';
+										position: absolute;
+										top: 0;
+										left: 0;
+										cursor: default;
+									}
 								}
 								#pickMe {
 									position: absolute;
@@ -317,6 +374,45 @@ body {
 									float: none;
 									width: 100%;
 									height: 100%;
+									overflow: visible;
+									&.topArrow {
+										margin-top: 16px;
+										& .daterangepicker {
+											&:before,
+											&:after {
+												content: '';
+												display: block;
+												position: absolute;
+												left: 50%;
+												top: -16px;
+												width: 0;
+												height: 0;
+											}
+											&:before {
+												border: 0 solid transparent;
+												border-width: 0 16px 16px 16px;
+												border-bottom-color: #aaa;
+											}
+											&:after {
+												border: 0 solid transparent;
+												border-width: 0 15px 15px 15px;
+												border-bottom-color: #fff;
+												margin-top: 2px;
+												margin-left: 1px;
+											}
+										}
+										&.rightAlign .daterangepicker {
+											&:before,
+											&:after {
+												left: auto;
+												right: 1rem;
+											}
+											&:after {
+												margin-left: 0;
+												margin-right: 1px;
+											}
+										}
+									}
 									&>.daterangepicker {
 										display: none;
 										position: absolute;
@@ -326,9 +422,10 @@ body {
 										width: 278px;
 										padding: 4px;
 										margin: 0;
-										top: 150%!important;
-										left: -50%!important;
-										width: 240% !important;
+										top: 100% !important;
+										left: -50% !important;
+										width: 230% !important;
+										border: 1px solid #aaa;
 									}
 								}
 							}
@@ -524,6 +621,10 @@ body {
 		}
 		.foot {
 			padding-top: 4rem;
+			display: block;
+			&[hidden] {
+				display: none;
+			}
 			.tabela {
 				position: relative;
 			}
