--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -102,6 +102,10 @@ body {
 						position: relative;
 						width: 50%;
 					}
+					.submit {
+						position: relative;
+						padding-left: .7rem;
+					}
 					.rooms {
 						position: relative;
 						padding-left: .7rem;
@@ -116,53 +120,6 @@ body {
 							cursor: default;
 						}
 					}
-					.rooms label {
-						position: relative;
-						display: block;
-						.label {
-							position: absolute;
-							top: 0;
-							left: 0;
-							z-index: 1;
-							width: 100%;
-							height: 100%;
-							border: 1px solid #aaa;
-							border-radius: 4px;
-							background-color: #fff;
-							display: block;
-							padding: 0.5rem;
-							vertical-align: middle;
-							font-size: 1.3rem;
-							color: #aaa;
-							cursor: pointer;
-							span {
-								vertical-align: middle;
-								display: inline-block;
-								white-space: nowrap;
-							}
-						}
-						.txt {
-							width: 100%;
-							height: 100%;
-							border: 1px solid #aaa;
-							background-color: #fff;
-							display: block;
-							padding: 0.5rem;
-							vertical-align: middle;
-							font-size: 1.3rem;
-							color: #222;
-						}
-						input:focus,
-						input.ng-dirty,
-						input.ng-touched,
-						&.touched {
-							div .label,
-							&~.label {
-								display: none;
-							}
-						}
-					}
-
 					.dateRange label {
 						position: relative;
 						display: block;
@@ -174,7 +131,7 @@ body {
 							width: 90%;
 							height: 100%;
 							display: block;
-							padding: 0.6rem;
+							padding: 0.5rem;
 							font-size: 1.2rem;
 							color: #aaa;
 							cursor: pointer;
@@ -189,6 +146,7 @@ body {
 							width: 100%;
 							height: 100%;
 							border: 1px solid #aaa;
+							border-radius: 4px;
 							background-color: #fff;
 							display: block;
 							padding: 0.5rem;
@@ -199,7 +157,9 @@ body {
 						input:focus,
 						input.ng-dirty,
 						input.ng-touched,
-						&.touched {
+						&.touched,
+						& .touched {
+							span.label,
 							div .label,
 							&~.label {
 								display: none;
@@ -383,7 +343,8 @@ body {
 												content: '';
 												display: block;
 												position: absolute;
-												left: 50%;
+												left: auto;
+												right: 64%;
 												top: -16px;
 												width: 0;
 												height: 0;
@@ -398,17 +359,16 @@ body {
 												border-width: 0 15px 15px 15px;
 												border-bottom-color: #fff;
 												margin-top: 2px;
-												margin-left: 1px;
+												margin-right: 1px;
 											}
 										}
 										&.rightAlign .daterangepicker {
 											&:before,
 											&:after {
 												left: auto;
-												right: 1rem;
+												right: 42%;
 											}
 											&:after {
-												margin-left: 0;
 												margin-right: 1px;
 											}
 										}
@@ -424,8 +384,23 @@ body {
 										margin: 0;
 										top: 100% !important;
 										left: -50% !important;
-										width: 230% !important;
+										width: 250% !important;
 										border: 1px solid #aaa;
+										& .calendar {
+											width: 49%;
+											max-width: 49%;
+											.fa-calendar.glyphicon,
+											.input-mini {
+												display: none;
+											}
+											td {
+												line-height: 1.5;
+											}
+											.month {
+												font-weight: 600;
+												padding: 0.5rem 0 1rem;
+											}
+										}
 									}
 								}
 							}
@@ -435,12 +410,14 @@ body {
 							cursor: pointer !important;
 							.quartos {
 								border: 1px solid #aaa;
+								border-radius: 4px;
 								display: block;
 								width: 100%;
 								font-size: 1.2rem;
 								padding: 0.5rem;
 								line-height: 1.2;
 								color: #aaa;
+								text-align: left;
 								.pessoas {
 									float: right;
 								}
