--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,12 @@
 					<div class="opt">
 						<div class="dateRange">
 							<label class="wrap" (keydown.Tab)="nextInput($event)">
-								<input type="text" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event)" (apply.daterangepicker)="selectedDate($event)"/>
+								<input
+									type="text"
+									name="daterangeInput"
+									daterangepicker
+									[options]="options"
+									(selected)="selectedDate($event)"/>
 								<div [attr.class]="'checkin' + ((mdl.entrada.val || '').length ? ' touched' : '')">
 									<span class="txt" [textContent]="mdl.entrada.txt || '&nbsp;'"></span>
 									<span class="label"><span>Check-in</span></span>
