--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,7 +25,7 @@ body {
 		.room.topArrow,
 		.completer-dropdown {
 			position: relative;
-			margin-top: 16px;
+			margin-top: 22px;
 			&:before,
 			&:after {
 				content: '';
@@ -198,7 +198,7 @@ body {
 							z-index: 1;
 							text-align: left;
 							.completer-dropdown-holder {
-								margin-top: 1.3rem;
+								margin-top: 22px;
 								position: relative;
 								.completer-dropdown {
 									width: 100%;
@@ -336,7 +336,7 @@ body {
 									height: 100%;
 									overflow: visible;
 									&.topArrow {
-										margin-top: 16px;
+										margin-top: 22px;
 										& .daterangepicker {
 											&:before,
 											&:after {
@@ -344,7 +344,7 @@ body {
 												display: block;
 												position: absolute;
 												left: auto;
-												right: 64%;
+												right: 66%;
 												top: -16px;
 												width: 0;
 												height: 0;
@@ -366,7 +366,7 @@ body {
 											&:before,
 											&:after {
 												left: auto;
-												right: 42%;
+												right: 46%;
 											}
 											&:after {
 												margin-right: 1px;
@@ -419,12 +419,13 @@ body {
 								color: #aaa;
 								text-align: left;
 								.pessoas {
-    float: right;
-    position: absolute;
-    right: 1rem;
-    background-color: #fff;
-    top: 50%;
-    transform: translate(0, -50%);								}
+									float: right;
+									position: absolute;
+									right: 1rem;
+									background-color: #fff;
+									top: 50%;
+									transform: translate(0, -50%);
+								}
 							}
 							&.touched {
 								cursor: default;
@@ -463,6 +464,7 @@ body {
 									display: block;
 									padding-bottom: 0.5rem;
 									margin-bottom: 1.5rem;
+									text-align: left;
 									.btn {
 										padding: 0.5rem;
 										cursor: pointer;
