--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -148,7 +148,7 @@ body {
 						}
 						.txt {
 							width: 100%;
-							height: 100%;
+							height: 42px;
 							border: 1px solid #aaa;
 							border-radius: 4px;
 							background-color: #fff;
