--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="app-home">
-	<div>
+	<div [attr.class]="(vars.hotelList.HotelListResponse !== null ? 'search' : '')">
 		<div>
 			<div class="head wrap">
 				<h1><img [attr.src]="vars.logo.url" [attr.alt]="vars.logo.alt"></h1>
@@ -30,7 +30,7 @@
 									<span class="txt" [textContent]="mdl.saida.txt || '&nbsp;'"></span>
 									<span class="label"><span>Check-out</span></span>
 								</div>
-								<div id="pickMe" [attr.class]="'topArrow' + ((mdl.entrada.val || '').length ? ' rightAlign': '')"></div>
+								<div (click)="onClick" id="pickMe" [attr.class]="'topArrow' + ((mdl.entrada.val || '').length ? ' rightAlign': '')"></div>
 							</label>
 						</div>
 						<div id="rooms" class="rooms">
@@ -51,10 +51,10 @@
 							<div [attr.class]="'room' + (open.rooms ? ' show topArrow rightAlign' : '')">
 								<div class="header">
 									<a (click)="show.room = n" [attr.class]="'btn' + (show.room === n ? ' bgc c1 active':'')" *ngFor="let p of mdl.room.people.list; let n = index;">
-								<span>
-									Quarto {{n + 1}}
-								</span>
-							</a>
+										<span>
+											Quarto {{n + 1}}
+										</span>
+									</a>
 									<span [hidden]="mdl.room.total <= 1" class="icon-remove remove" (click)="rmRoom(show.room)">
 								<img [attr.src]="vars.icons.remove" alt="&times;">
 							</span>
