--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -69,6 +69,7 @@ body {
 				vertical-align: middle;
 			}
 			h1 {
+				transition: width 1s ease;
 				width: 29.3rem;
 				height: 9.4rem;
 				border-right: 1px solid #aaa;
@@ -729,6 +730,22 @@ body {
 					background: #f2f2f2;
 					background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
 					background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
+				}
+			}
+		}
+		& .search {
+			&>div {
+				vertical-align: top;
+				height: 0;
+				padding-top: 12rem;
+				.head {
+					h1 {
+						width: 10rem;
+						border: 0;
+					}
+					p {
+						display: none;
+					}
 				}
 			}
 		}
