--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,7 +108,7 @@
 						<input placeholder="eanSharedSecret" name="secret" [(ngModel)]="mdl.keys.secret">
 					</div>
 				</form>
-				<div class="sub" *ngIf="vars.hotelList.state > 1">
+				<div class="sub" *ngIf="vars.hotelList.HotelListResponse && vars.hotelList.state > 1">
 					<span class="txt">
 						{{mdl.busca.lastVal}}: {{vars.hotelList.properties}} propriedade{{vars.hotelList.properties > 1 ? 's' : ''}}
 					</span>
