--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -149,12 +149,12 @@ body {
 						}
 						.txt {
 							width: 100%;
-							height: 42px;
+							height: 100%;
 							border: 1px solid #aaa;
 							border-radius: 4px;
 							background-color: #fff;
 							display: block;
-							padding: 0.5rem;
+							padding: 0.6rem;
 							vertical-align: middle;
 							font-size: 1.3rem;
 							color: #222;
@@ -737,7 +737,17 @@ body {
 			&>div {
 				vertical-align: top;
 				height: 0;
-				padding-top: .8rem;
+				padding-top: 11rem;
+				position: relative;
+				&>.wrap {
+					position: fixed;
+					top: 0;
+					left: 0;
+					width: inherit;
+					z-index: 1;
+					background-color: #fff;
+					padding: 1rem 10rem;
+				}
 				.head {
 					margin: 0;
 					position: relative;
