--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,12 +31,7 @@
 						<div class="opt">
 							<div class="dateRange">
 								<label class="wrap" (keydown.Tab)="nextInput($event)">
-									<input
-										type="text"
-										name="daterangeInput"
-										daterangepicker
-										[options]="options"
-										(selected)="selectedDate($event)"/>
+									<input (showCalendarDaterangepicker)="showCal($event)" type="text" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event)" />
 									<div [attr.class]="'checkin' + ((mdl.entrada.val || '').length ? ' touched' : '')">
 										<span class="txt" [textContent]="mdl.entrada.txt || '&nbsp;'"></span>
 										<span class="label"><span>Check-in</span></span>
@@ -118,42 +113,45 @@
 			</div>
 			<div class="result" [hidden]="!(vars.hotelList.HotelListResponse || (vars.hotelList.HotelListResponseStr || '').length)">
 				<div *ngIf="vars.hotelList.HotelListResponse;then content else other_content"></div>
-				<ng-template #content>
-					<div class="tabela">
-						<table>
-							<thead>
-								<tr>
-									<th>thumbNailUrl</th>
-									<th>name</th>
-									<th>hotelRating</th>
-									<th>address1</th>
-									<th>roomDescription</th>
-									<th>currencyCode</th>
-									<th>nonRefundable</th>
-									<th>Markup</th>
-									<th>HotaxFinalPrice</th>
-									<th>HotaxFinalCommission%</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr *ngFor="let td of vars.hotelList.HotelListResponse">
-									<td><img [attr.src]="'https://i.travelapi.com' + td.thumbNailUrl" alt=""></td>
-									<td [textContent]="td.name"></td>
-									<td [textContent]="td.hotelRating"></td>
-									<td [textContent]="td.address1"></td>
-									<td [innerHTML]="td.shortDescription"></td>
-									<td [textContent]="td.rateCurrencyCode"></td>
-									<td>{{ td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.nonRefundable ? 'SIM' : 'NÃO' }}</td>
-									<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.markup"></td>
-									<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalPrice"></td>
-									<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalCommissionPercent"></td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</ng-template>
-				<ng-template #other_content>{{ vars.hotelList.HotelListResponseStr }}</ng-template>
 			</div>
 		</div>
 	</div>
+	<ng-template #content>
+		<sticky>
+			<img src="http://placehold.it/500x1500" alt="">
+		</sticky>
+		<div class="tabela">
+			<table>
+				<thead>
+					<tr>
+						<th>thumbNailUrl</th>
+						<th>name</th>
+						<th>hotelRating</th>
+						<th>address1</th>
+						<th>roomDescription</th>
+						<th>currencyCode</th>
+						<th>nonRefundable</th>
+						<th>Markup</th>
+						<th>HotaxFinalPrice</th>
+						<th>HotaxFinalCommission%</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let td of vars.hotelList.HotelListResponse">
+						<td><img [attr.src]="'https://i.travelapi.com' + td.thumbNailUrl" alt=""></td>
+						<td [textContent]="td.name"></td>
+						<td [textContent]="td.hotelRating"></td>
+						<td [textContent]="td.address1"></td>
+						<td [innerHTML]="td.shortDescription"></td>
+						<td [textContent]="td.rateCurrencyCode"></td>
+						<td>{{ td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.nonRefundable ? 'SIM' : 'NÃO' }}</td>
+						<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.markup"></td>
+						<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalPrice"></td>
+						<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalCommissionPercent"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</ng-template>
+	<ng-template #other_content>{{ vars.hotelList.HotelListResponseStr }}</ng-template>
 </div>
