--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -416,6 +416,9 @@ body {
 												padding: 0.5rem 0 1rem;
 											}
 										}
+										& .ranges {
+											display: none;
+										}
 									}
 								}
 							}
